# ragger

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.cpu  Dockerfile.cuda  README.md  makefile  pyproject.toml  tutorial.ipynb
.github/workflows/: build.yaml  ci.yaml
config/: config.yaml  ragger_config.yaml
config/demo/: danish.yaml  default.yaml
config/document_store/: jsonl.yaml
config/embedder/: e5.yaml
config/embedding_store/: numpy.yaml
config/generator/: openai.yaml  vllm.yaml
config/hydra/job_logging/: custom.yaml
config/language/: danish.yaml  english.yaml
data/processed/: document_store.jsonl
src/alexandrainst_ragger/: __init__.py  data_models.py  embedding_store.py  generator.py  rag_system.py  webui_utils.py
src/ragger/: __init__.py  cli.py  constants.py  data_models.py  demo.py  document_store.py  embedder.py  embedding.py  embedding_store.py  exceptions.py  generator.py  gui.py  llm.py  openai.py  prompts.py  qa_bot.py  rag_system.py  retriever.py  utils.py
src/ragger/old/: __init__.py  embedding.py  gui.py  llm.py  openai.py  prompts.py  qa_bot.py  types.py  utils.py
src/scripts/: run_cli.py  run_demo.py  run_gui.py  your_script.py
tests/: conftest.py  test_data_models.py  test_demo.py  test_document_store.py  test_embedder.py  test_embedding_store.py  test_generator.py  test_rag_system.py  test_retriever.py  test_utils.py
