[tool.poetry]
name = "ragger"
description = "A repository for general-purpose RAG applications."
version = "1.2.0"
authors = [
    "Dan Saattrup Nielsen <dan.nielsen@alexandra.dk>",
    "Anders Jess Pedersen <anders.j.pedersen@alexandra.dk>",
]
readme = "README.md"
license = "Proprietary"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
click = "^8.1.7"
tiktoken = { version = ">=0.7.0,<1.0.0", optional = true }
openai = { version = "^1.23.2", optional = true }
vllm = { version = "^0.5.4", optional = true, markers = "sys_platform != 'darwin'" }
torch = [
    { version = "^2.3.0", optional = true, source = "pypi", markers = "sys_platform == 'darwin' or extra != 'cpu'" },
    { version = "^2.3.0+cpu", optional = true, source = "torch_cpu", markers = "sys_platform == 'linux' and extra == 'cpu'" },
]
psycopg2-binary = { version = "^2.9.9", optional = true }
sentence_transformers = { version = "^2.7.0", optional = true }
gradio = { version = "^4.27.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1.1"
pytest-cov = ">=4.1.0"
pre-commit = ">=3.6.2"
readme-coverage-badger = ">=0.1.2"
ruff = ">=0.3.2"
mypy = ">=1.9.0"
nbstripout = ">=0.7.1"

[tool.poetry.extras]
default = [
    "openai",
    "tiktoken",
]
postgres = [
    "psycopg2-binary",
]
vllm = [
    "vllm",
]
e5 = [
    "sentence-transformers",
]
cpu = [
    "torch",
]
demo = [
    "gradio",
]
all = [
    "openai",
    "tiktoken",
    "torch",
    "vllm",
    "psycopg2-binary",
    "sentence-transformers",
    "gradio",
]

[[tool.poetry.source]]
name = "pypi"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.scripts]
ragger-demo = "ragger.cli:run_demo"
ragger-compile = "ragger.cli:compile"

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "tutorial.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = [
    "I",
    "D",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    '--durations=10',
    '--color=yes',
    '--doctest-modules',
    '--cov=src/ragger',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::ResourceWarning",
    "ignore::FutureWarning",
]
log_cli_level = "info"
testpaths = [
    "tests",
    "src/ragger",
]

[build-system]
requires = [
    "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"
